--- a/style.css
+++ b/style.css
@@ -1,16 +1,144 @@
-h2{
-float: right;
-padding-top: 34px;
-background-color:rgb(144, 241, 144);
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+	display: none;
 }
-h1{
-   float: right;
-   padding-top: 34px;
-   background-color: rgb(144, 241, 144); 
-   top: 20px;
+
+/* background image */
+
+body {
+  -ms-overflow-style: none;
+  background-image: url(./assets/blue.PNG);
+  background-size: cover;
+  min-height: 100vh;
+  padding-bottom: 100px;
 }
-footer {
-    text-align: center;
-    background-color: silver;
+
+ /* Navbar stylings */
+
+nav {
+    border: 1px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.navbar-custom {
+  background-color: rgb(110, 110, 117);
+}
+.navbar-brand {
+  padding: 8px;
+  background-color: rgb(110, 110, 117);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.container {
+    background-color: rgb(245, 245, 245, 0.9);
+    border: solid 1px;
     padding: 20px;
+}
+
+/* Header underlines */
+
+h1, h2, h4 {
+  border-bottom: solid 5px;
+  padding: 10px;
+}
+
+.img-fluid {
+  padding-top: 15px;
+}
+
+p{
+  padding: 10px;
+}
+
+button {
+  margin: 5px;
+}
+/* Portfolio stylings */
+
+.card {
+  margin: 20px;
+  transition: transform .3s;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+a:hover {
+  filter:brightness(110%);
+}
+
+.img {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+h3 {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  bottom: 30px; 
+  width: 100%;
+  background-color: rgb(182, 186, 243, 0.95);
+  font-size: 18px;
+}
+
+/* The form placeholder stylings */
+
+.form { 
+  padding: 40px;
+  margin: 40px;
+  width: auto;
+}
+
+h4 {
+  margin-top: 20px;
+}
+
+/* FontAwesome CSS */
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+
+  .fa:hover {
+      opacity: .7;
+      color: white;
+      text-decoration: none;
+  }
+
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  
+  .fa-github {
+    background: black;
+    color: white;
+  }
+
+  /* Footer CSS */
+
+footer {
+  z-index: 3;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(110, 110, 117);
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 12px;
+  border-top: solid 2px skyblue;
 }
